# ThermoCR

./: .gitignore  01.out  01_02.out  01_02_freq.out  01_02_sp.out  01_02_sp_smd.out  02.out  03_09_vtst.xlsx  03_10_vtst.xlsx  1.mol  LICENSE  QMkineticsScan.xlsx  QMthermoScan.xlsx  README.md  calc_q.py  calc_thermo_corr.py  constant.py  convert_shermo_scan_to_cantera_yaml.py  dev.py  fit_thermo.py  pyproject.toml  qm_thermo.py  read_qm_out.py  s1.xlsx  s2.xlsx  setup.py  ts_1_to_2.xlsx  utils.py
Arrhenius_result/: k.txt  k_experiment_data_scatter.txt  k_fit_data_curve.txt  reaction.yaml
Arrhenius_result2/: k.txt  k_fit_data_curve.txt
QMkinetics/: __init__.py  equilibrium_constants.py  export_cantera_kinetics_yaml.py  fit_kinetics.py  qm_kinetics.py  tunnelling_effect.py
QMthermo/: __init__.py  calc_q.py  calc_thermo_corr.py  fit_thermo.py  qm_thermo.py
ThermoCR/: __init__.py  __main__.py  _version.py  cli.py  constants.py  elements.py  types.py
ThermoCR.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/: C.out  C.xlsx  C_1000_6000K.xlsx  C_100_1000K.xlsx  C_all.xlsx  H2.out  QMthermoScan_C_wB97Mp2_def2QZVPP.xlsx  QMthermoScan_H2_wB97Mp2_def2QZVPP.xlsx  settings.ini
doc/: ThermoCR.html  index.html  modern_api_manual.md  search.js
example/: CPD_SP.out  DCPD_SP.out  IRC.xlsx  QMkineticsScan.xlsx  QMthermoScan_01_02_TS.xlsx  QMthermoScan_01_02_path1_1.xlsx  QMthermoScan_01_02_path1_10.xlsx  QMthermoScan_01_02_path1_2.xlsx  QMthermoScan_01_02_path1_3.xlsx  QMthermoScan_01_02_path1_4.xlsx  QMthermoScan_01_02_path1_5.xlsx  QMthermoScan_CPD.xlsx  (+20 more)
(+158 files in other folders)
